--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "everscale-standalone-client": "^2.1.18",
     "i18next": "^22.4.14",
     "moment": "^2.29.4",
+    "nekoton-wasm": "^1.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
     "styled-components": "^5.3.9",
     "typescript": "^5.0.2",
-    "venom-connect": "^1.0.18"
+    "venom-connect": "^1.0.18",
+    "vite-plugin-top-level-await": "^1.3.1",
+    "vite-plugin-wasm": "^3.2.2"
   },
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false vite",
