--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@apollo/client": "^3.7.10",
     "@react-oauth/google": "^0.9.0",
     "antd": "^5.3.2",
+    "eslint": "^8.41.0",
     "everscale-inpage-provider": "^0.3.58",
     "everscale-standalone-client": "^2.1.18",
+    "framer-motion": "^10.12.16",
     "i18next": "^22.4.14",
     "moment": "^2.29.4",
     "nekoton-wasm": "^1.1.6",
@@ -23,6 +25,7 @@
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false vite",
     "build": "tsc && vite build",
+    "cp-build": "yarn && tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix"
   },
