--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.7.10",
     "@react-oauth/google": "^0.9.0",
     "antd": "^5.3.2",
+    "class-validator": "^0.14.0",
     "eslint": "^8.41.0",
     "everscale-inpage-provider": "^0.3.58",
     "everscale-standalone-client": "^2.1.18",
