--- a/contracts/package.json
+++ b/contracts/package.json
@@ -20,11 +20,13 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.1",
     "body-parser": "^1.20.2",
     "everscale-inpage-provider": "^0.3.60",
     "express": "^4.18.2",
     "node-fetch": "^3.3.1",
     "sqlite": "^4.2.0",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.0"
   }
 }
