--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.10",
     "@react-oauth/google": "^0.9.0",
+    "@types/uuid": "^9.0.1",
     "antd": "^5.3.2",
     "class-validator": "^0.14.0",
     "eslint": "^8.41.0",
@@ -19,6 +20,7 @@
     "react-i18next": "^12.2.0",
     "styled-components": "^5.3.9",
     "typescript": "^5.0.2",
+    "uuid": "^9.0.0",
     "venom-connect": "^1.0.18",
     "vite-plugin-top-level-await": "^1.3.1",
     "vite-plugin-wasm": "^3.2.2"
