--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.10",
+    "@noble/ed25519": "^2.0.0",
     "@react-oauth/google": "^0.9.0",
+    "@types/ed25519": "^0.0.1",
     "@types/uuid": "^9.0.1",
     "antd": "^5.3.2",
     "class-validator": "^0.14.0",
+    "ed25519": "^0.0.5",
     "eslint": "^8.41.0",
     "everscale-inpage-provider": "^0.3.58",
     "everscale-standalone-client": "^2.1.18",
