--- a/package.json
+++ b/package.json
@@ -3,21 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.7.10",
-    "@noble/ed25519": "^2.0.0",
-    "@react-oauth/google": "^0.9.0",
-    "@types/ed25519": "^0.0.1",
-    "@types/uuid": "^9.0.1",
     "antd": "^5.3.2",
     "class-validator": "^0.14.0",
-    "ed25519": "^0.0.5",
     "eslint": "^8.41.0",
     "everscale-inpage-provider": "^0.3.58",
     "everscale-standalone-client": "^2.1.18",
     "framer-motion": "^10.12.16",
     "i18next": "^22.4.14",
     "moment": "^2.29.4",
-    "nekoton-wasm": "^1.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
@@ -25,10 +18,7 @@
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "typescript": "^5.0.2",
-    "uuid": "^9.0.0",
-    "venom-connect": "^1.0.18",
-    "vite-plugin-top-level-await": "^1.3.1",
-    "vite-plugin-wasm": "^3.2.2"
+    "venom-connect": "^1.0.18"
   },
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false vite",
